Add container class which will center the content inside

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,12 @@ img {
     display: block;
 }
 
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
 .header {}
 
 .header__nav {}
