--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,14 @@ img {
     align-items: center;
 }
 
+.fd-row {
+    flex-direction: row;
+}
+
+.fd-col {
+    flex-direction: column;
+}
+
 
 
 .header {
@@ -83,9 +91,7 @@ img {
     gap: 40px;
 }
 
-.nav-list__item {
-    padding: 24px 0;
-}
+.nav-list__item {}
 
 .nav-list__link {
     font-weight: 500;
@@ -94,6 +100,8 @@ img {
     letter-spacing: 0.02em;
     color: #2e2f42;
 
+    display: block;
+    padding: 24px 0;
 }
 
 .nav-list__link:hover,
@@ -126,6 +134,7 @@ img {
 
 .intro {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .intro__title {
@@ -134,6 +143,8 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+
+    max-width: 496px;
 }
 
 .intro__button {
@@ -144,6 +155,15 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+
+    margin-top: 48px;
 }
 
 .intro__button:hover,
