--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,10 @@ img {
     padding: 120px 0;
 }
 
-.features__title {}
+.features__title {
+    display: none;
+    visibility: hidden;
+}
 
 .features__list {
     display: flex;
@@ -260,7 +263,9 @@ img {
     text-align: center;
 }
 
-.portfolio {}
+.portfolio {
+    padding: 120px 0;
+}
 
 .portfolio__title {
     font-size: 36px;
@@ -269,13 +274,29 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+
+    margin-bottom: 72px;
 }
 
-.portfolio__list {}
+.portfolio__list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
 
-.portfolio-item {}
+.portfolio-item {
+    flex-basis: calc((100% - 48px) / 3);
+
+}
 
 .portfolio-item__photo {}
+
+.portfolio-item__info {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
 .portfolio-item__title {
     font-weight: 500;
@@ -283,6 +304,8 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+    margin-bottom: 8px;
 }
 
 .portfolio-item__text {
