Add styling for footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -317,14 +317,18 @@ img {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
-.logo-light {
-    color: #f4f4fd;
+.footer__logo {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer__text {
     line-height: 1.5;
     color: #f4f4fd;
     letter-spacing: 0.02em;
+
+    max-width: 264px;
 }
