--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,16 @@ img {
 }
 
 .visually-hidden {
-    display: none;
-    visibility: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .flex {
@@ -180,10 +188,7 @@ img {
     padding: 120px 0;
 }
 
-.features__title {
-    display: none;
-    visibility: hidden;
-}
+.features__title {}
 
 .features__list {
     display: flex;
